--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+:root {
+	/* Colors */
+	--clr-primary-800: hsl(345, 76%, 20%); 
+	--clr-primary-700: hsl(353, 73%, 26%);
+	--clr-primary-600: hsl(354, 53%, 43%);
+	--clr-primary-500: hsl(351, 71%, 38%);
+	--clr-primary-400: hsl(354, 71%, 45%);
+
+	--clr-neutral-900: hsl(232, 12%, 13%);
+	--clr-neutral-100: hsl(0, 0%, 100%);
+
+
+	/* Typography */
+	--ff-primary: 'Poppins', sans-serif;
+
+	--fw-300: 300;
+	--fw-400: 400;
+	--fw-600: 600;
+	--fw-800: 800;
+
+	--fs-300: .75rem; /* 12px */
+	--fs-400: 1rem; 	/* 16px */
+	--fs-500: 1.5rem; /* 24px */
+	--fs-600: 2rem; 	/* 32px */
+	--fs-700: 2.5rem; /* 40px */
+	--fs-800: 3rem; 	/* 48px */
+	--fs-900: 4rem; 	/* 64px */
+
+
+	/* Spacing */
+	--size-200: .5rem; 	/* 8px */
+	--size-300: .75rem;	/* 12px */
+	--size-400: 1rem;		/* 16px */
+	--size-500: 1.5rem;	/* 24px */
+	--size-600: 2rem;		/* 32px */
+	--size-700: 3rem;		/* 48px */
+	--size-800: 4rem;		/* 64px */
+	--size-900: 5rem;		/* 80px */
+}
+
+
 /* Box sizing rules */
 *,
 *::before,
