--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,71 @@ svg {
 		scroll-behavior: auto !important;
 	}
 }
+
+/* UTILITY CLASSES */
+/* Layout */
+.visually-hidden {
+	position: absolute;
+
+	width: 1px;
+	height: 1px;
+
+	padding: 0;
+	margin: 1px;
+
+	overflow: hidden;
+
+	clip: rect(0, 0, 0, 0);
+	
+	white-space: nowrap;
+
+	border: 0;
+}
+
+.container {
+	width: min(
+		var(--max-width, 1110px),
+		100% - (var(--container-padding, 1remm) * 2)
+	);
+
+	margin-inline: auto;
+}
+
+.flex {
+	display: flex;
+	gap: var(--flex-gap, 1rem);
+}
+
+
+/* Typography */
+.text-center { text-align: center; }
+.text-center p { margin-inline: auto; }
+
+.text-uppercase { text-transform: uppercase; }
+
+.fc-neutral-100 { color: var(--clr-neutral-100); }
+
+.fw-300 { font-weight: var(--fw-300); }
+.fw-400 { font-weight: var(--fw-400); }
+.fw-600 { font-weight: var(--fw-600); }
+.fw-800 { font-weight: var(--fw-800); }
+
+.fs-300 { font-size: var(--fs-300); }
+.fs-400 { font-size: var(--fs-400); }
+.fs-500 { font-size: var(--fs-500); }
+.fs-600 { font-size: var(--fs-600); }
+.fs-700 { font-size: var(--fs-700); }
+.fs-800 { font-size: var(--fs-800); }
+.fs-900 { font-size: var(--fs-900); }
+
+
+/* Background */
+.bg-primary-800 { background-color: var(--clr-primary-800); }
+
+
+/* Spacing */
+.padding-block-400 { padding-block: var(--size-400); }
+
+.padding-inline-400 { padding-inline: var(--size-400); }
+
+.mx-auto { margin-inline: auto; }
